# quickcatch

./: .gitignore  CMakeLists.txt  Nodes.h  README.md  Stack.h  test.cpp
